@@ -189,7 +189,7 @@ public class ConsentOrderPrintServiceTest extends BaseServiceTest {
         assertThat(bulkPrintRequestArgumentCaptor.getValue().getBulkPrintDocuments().stream().map(BulkPrintDocument::getBinaryFileUrl)
             .collect(Collectors.toList()), hasItem("http://dm-store:8080/documents/d607c045-878e-475f-ab8e-b2f667d8af64/binary"));
         assertThat(bulkPrintRequestArgumentCaptor.getValue().getBulkPrintDocuments().stream().map(BulkPrintDocument::getFileName)
-            .collect(Collectors.toList()), hasItem("NotApprovedCoverLetter.pdf"));
+            .toList(), hasItem("NotApprovedCoverLetter.pdf"));
     }
 
     @Test
@@ -230,11 +230,11 @@ public class ConsentOrderPrintServiceTest extends BaseServiceTest {
         verify(genericDocumentService, times(2)).bulkPrint(bulkPrintRequestArgumentCaptor.capture(),
             any(), anyBoolean(), eq(AUTH_TOKEN));
         assertThat(bulkPrintRequestArgumentCaptor.getValue().getBulkPrintDocuments().stream().map(BulkPrintDocument::getBinaryFileUrl)
-            .collect(Collectors.toList()), hasItem("http://dm-store:8080/documents/d607c045-878e-475f-ab8e-b2f667d8af64/binary"));
+            .toList(), hasItem("http://dm-store:8080/documents/d607c045-878e-475f-ab8e-b2f667d8af64/binary"));
         assertThat(bulkPrintRequestArgumentCaptor.getValue().getBulkPrintDocuments().stream().map(BulkPrintDocument::getFileName)
-            .collect(Collectors.toList()), hasItem("GeneralOrder.pdf"));
+            .toList(), hasItem("GeneralOrder.pdf"));
         assertThat(bulkPrintRequestArgumentCaptor.getValue().getBulkPrintDocuments().stream().map(BulkPrintDocument::getFileName)
-            .collect(Collectors.toList()), hasItem("NotApprovedCoverLetter.pdf"));
+            .toList(), hasItem("NotApprovedCoverLetter.pdf"));
     }
 
     @Test
@@ -403,7 +403,7 @@ public class ConsentOrderPrintServiceTest extends BaseServiceTest {
         assertThat(bulkPrintRequestArgumentCaptor.getValue().getBulkPrintDocuments().stream().map(BulkPrintDocument::getBinaryFileUrl)
             .collect(Collectors.toList()), hasItem("http://dm-store:8080/documents/d607c045-878e-475f-ab8e-b2f667d8af64/binary"));
         assertThat(bulkPrintRequestArgumentCaptor.getValue().getBulkPrintDocuments().stream().map(BulkPrintDocument::getFileName)
-            .collect(Collectors.toList()), hasItem("NotApprovedCoverLetter.pdf"));
+            .toList(), hasItem("NotApprovedCoverLetter.pdf"));
     }
 
     @Test
